--- a/homepage/cup00003.html
+++ b/homepage/cup00003.html
@@ -34,7 +34,9 @@
 <body>
 	<div class="flexWrap">
 		<div class="flexLayer">
-			<h1><img src="../static/images/common/logo.png" alt="OPUS LOGISTICS" /></h1>
+			<h1>
+				<img src="../static/images/common/logo.png" alt="OPUS LOGISTICS" />
+			</h1>
 			<div class="flexContent">
 				<div class="inner">
 					<h2 class="tit" id="i00003-selectPlatformTypeLb">Select Platform Type</h2>
@@ -54,50 +56,45 @@
 						</dd>
 					</dl>
 					<div class="txtBox" id="i00003-platformDescription">
-						Share System <br />
-						Operation and Backup Service <br />
-						24hour On-line helpdesk Support <br />
-						15Gigabite Storage (1Gigabite / User)
+						Share System <br /> Operation and Backup Service <br /> 24hour On-line helpdesk Support <br /> 15Gigabite Storage (1Gigabite / User)
 					</div>
-						<div class="lineBasic"></div>
-						<dl class="inpItem fin">
-							<dt id="i00003-monthlyTotalLb"><span class="bold">Monthly Total</span></dt>
-							<dd class="tr">
-								<div class="inputBox readonly amount">
-									<input type="text" name="" class="inp Readonly" id="" readonly="readonly" value="USD">
-									<input type="text" name="i00003-totalPrice" class="inp Readonly" id="i00003-totalPrice" readonly="readonly" value="1,500.00">
-								</div>
-							</dd>
-						</dl>
+					<div class="lineBasic"></div>
+					<dl class="inpItem fin">
+						<dt id="i00003-monthlyTotalLb"><span class="bold">Monthly Total</span></dt>
+						<dd class="tr">
+							<div class="inputBox readonly amount">
+								<input type="text" name="" class="inp Readonly" id="" readonly="readonly" value="USD">
+								<input type="text" name="i00003-totalPrice" class="inp Readonly" id="i00003-totalPrice" readonly="readonly" value="1,500.00">
+							</div>
+						</dd>
+					</dl>
 
-						<h3 class="tit" id="i00003-termsOfUseLb">Terms of Use</h3>
-						<div class="txtBox" id="i00003-termsOfUse">
-							Service Agreement <br />
-						{Content of OPUS Logistics Service Agreement} <br />
-						{Content of OPUS Logistics Service Agreement} <br />
-						{Content of OPUS Logistics Service Agreement}
+					<h3 class="tit" id="i00003-termsOfUseLb">Terms of Use</h3>
+					<div class="txtBox" id="i00003-termsOfUse">
+						Service Agreement <br /> {Content of OPUS Logistics Service Agreement} <br /> {Content of OPUS Logistics Service Agreement} <br /> {Content of OPUS Logistics Service Agreement}
 					</div>
-							<div class="lineBasic"></div>
-							<div class="agreeChk">
-								<p class="txt" id="i00003-agreeTermsLb">I am sure to read and to agree the terms</p>
-								<div class="checkbox">
-									<input type="checkbox" name="i00003-agreeTermsChk" id="i00003-agreeTermsChk"><label for="i00003-agreeTermsChk" id="i00003-agreeTerms">Agree</label>
-								</div>
-							</div>
-							<div class="joinBtn">
-								<div class="btns">
-									<button class="btn" id="i00003-next">Next</button>
-								</div>
-							</div>
+					<div class="lineBasic"></div>
+					<div class="agreeChk">
+						<p class="txt" id="i00003-agreeTermsLb">I am sure to read and to agree the terms</p>
+						<div class="checkbox">
+							<input type="checkbox" name="i00003-agreeTermsChk" id="i00003-agreeTermsChk">
+							<label for="i00003-agreeTermsChk" id="i00003-agreeTerms">Agree</label>
 						</div>
 					</div>
-					<div class="link">
-						<a href="#" id="i00003-helpLb">Help</a>
-						<a href="#" id="i00003-privacyLb">Privacy</a>
-						<a href="#" id="i00003-termsLb">Terms</a>
+					<div class="joinBtn">
+						<div class="btns">
+							<button class="btn" id="i00003-next">Next</button>
+						</div>
 					</div>
 				</div>
 			</div>
+			<div class="link">
+				<a href="#" id="i00003-helpLb">Help</a>
+				<a href="#" id="i00003-privacyLb">Privacy</a>
+				<a href="#" id="i00003-termsLb">Terms</a>
+			</div>
+		</div>
+	</div>
 </body>
 
 </html>
