--- a/homepage/cup00007.html
+++ b/homepage/cup00007.html
@@ -39,33 +39,29 @@
 			</h1>
 			<div class="flexContent">
 				<div class="inner">
-					<h2 class="tit" id="i10001-signInLb">Sign In</h2>
+					<h2 class="tit" id="i00007-subscriptionSubmittedLb">Your Subscription Submitted</h2>
 					<div class="inpInner">
-						<div class="idArea">
-							<div class="inputBox">
-								<input type="text" name="i10001-userId" class="inp Mandate" id="i10001-userId" maxlength="50" placeholder="Email or User ID" />
-								<button class="inpReset"></button>
-							</div>
-						</div>
-						<div class="loginCheck">
-							<div class="checkbox">
-								<input type="checkbox" name="i10001-rememberMe" id="i10001-rememberMe">
-								<label for="i10001-rememberMe" id="i10001-rememberMeLb">Remember Me</label>
-							</div>
-						</div>
-						<div class="joinBtn">
-							<a href="#" id="i10001-newAccountLb">New Account</a>
-							<div class="btns">
-								<button class="btn" id="i10001-next">Next</button>
-							</div>
-						</div>
+						<p class="nTxt" id="i00007-dontWorryLb">
+							You have now successfully submit your subscription of <br /> OPUS Logistics Service.<br /> We will send a Email to instruct the service in few days. Please, follow the instruction in the Email.
+						</p>
+						<ul class="list1">
+							<li>
+								<a href="#" id="i00007-goToHome">Go to OPUS Logistics Homepage</a>
+							</li>
+							<li>
+								<a href="#" id="i00007-goToTraning">Go to OPUS Logistics Traning Materials</a>
+							</li>
+							<li>
+								<a href="#" id="i00007-goToSupport">Go to OPUS Logistics Support</a>
+							</li>
+						</ul>
 					</div>
 				</div>
 			</div>
 			<div class="link">
-				<a href="#" id="i10001-helpLb">Help</a>
-				<a href="#" id="i10001-privacyLb">Privacy</a>
-				<a href="#" id="i10001-termsLb">Terms</a>
+				<a href="#" id="i10007-helpLb">Help</a>
+				<a href="#" id="i10007-privacyLb">Privacy</a>
+				<a href="#" id="i10007-termsLb">Terms</a>
 			</div>
 		</div>
 	</div>
