--- a/pub/templateB.html
+++ b/pub/templateB.html
@@ -48,15 +48,53 @@
 	</script>
 	<!-- //2018.05.16 -->
 	<style>
-		body { padding:0 20px; padding-bottom:200px; overflow:auto;}
-	h1 { font-size:30px; padding:0 20px;}
-	h2 { padding:20px 0; margin-top:20px; border-top:1px dashed #666666; font-size:20px;}
-	.box { margin-top:20px; border:1px solid #E3E3E3}
-	.maping {position:fixed; z-index:1000; top:5px; left:0; width:100%; padding:5px; padding-bottom:0; border:1px solid blue; background:#fff;}
-	.maping a {display:inline-block; padding:3px; margin-bottom:5px; border:1px solid #333;}
-	.pubTextarea {width:100%; margin-top:10px;}
+		body {
+			padding: 0 20px;
+			padding-bottom: 200px;
+			overflow: auto;
+		}
 
-</style>
+		h1 {
+			font-size: 30px;
+			padding: 0 20px;
+		}
+
+		h2 {
+			padding: 20px 0;
+			margin-top: 20px;
+			border-top: 1px dashed #666666;
+			font-size: 20px;
+		}
+
+		.box {
+			margin-top: 20px;
+			border: 1px solid #E3E3E3
+		}
+
+		.maping {
+			position: fixed;
+			z-index: 1000;
+			top: 5px;
+			left: 0;
+			width: 100%;
+			padding: 5px;
+			padding-bottom: 0;
+			border: 1px solid blue;
+			background: #fff;
+		}
+
+		.maping a {
+			display: inline-block;
+			padding: 3px;
+			margin-bottom: 5px;
+			border: 1px solid #333;
+		}
+
+		.pubTextarea {
+			width: 100%;
+			margin-top: 10px;
+		}
+	</style>
 </head>
 
 <body>
@@ -84,10 +122,10 @@
 	</div>
 	<!-- souce code 뷰어 -->
 	<textarea class="pubTextarea" name="" id="" cols="30" rows="10">
-<div class="inputBox">
-	<input type="text" name="" class="inp pwinp" id="test" placeholder="" />
-	<button class="inpReset"></button>
-</div>
+		<div class="inputBox">
+			<input type="text" name="" class="inp pwinp" id="test" placeholder="" />
+			<button class="inpReset"></button>
+		</div>
 	</textarea>
 	<!-- //souce code 뷰어 -->
 
@@ -173,7 +211,8 @@
 
 	<h2>체크박스</h2>
 	<div class="checkbox">
-		<input type="checkbox" name="" id="check"><label for="check">체크박스</label>
+		<input type="checkbox" name="" id="check">
+		<label for="check">체크박스</label>
 	</div>
 	<!-- souce code 뷰어 -->
 	<div class="box">
@@ -200,18 +239,18 @@
 	</dl>
 	<!-- souce code 뷰어 -->
 	<textarea class="pubTextarea" name="" id="" cols="30" rows="10">
-<dl class="inpItem">
-	<dt id="i10003-companyLb">Company</dt>
-	<dd>
-		<div class="inputBox schType ty1">
-			<div class="inner">
-				<input type="text" class="inp autoSch ty1 code Readonly" readonly="readonly">
-				<input type="text" name="" class="inp autoSch ty1 name" id="i10003-company" placeholder="Type Company Name">
-				<button class="inpReset"></button>
-			</div>
-		</div>
-	</dd>
-</dl>
+		<dl class="inpItem">
+			<dt id="i10003-companyLb">Company</dt>
+			<dd>
+				<div class="inputBox schType ty1">
+					<div class="inner">
+						<input type="text" class="inp autoSch ty1 code Readonly" readonly="readonly">
+						<input type="text" name="" class="inp autoSch ty1 name" id="i10003-company" placeholder="Type Company Name">
+						<button class="inpReset"></button>
+					</div>
+				</div>
+			</dd>
+		</dl>
 	</textarea>
 	<!-- //souce code 뷰어 -->
 
@@ -230,14 +269,14 @@
 	</div>
 	<!-- souce code 뷰어 -->
 	<textarea name="" id="" cols="30" rows="10" class="pubTextarea">
-<div class="comboBox">
-	<select class="comboSelect" id="" placeholder="Select a Type">
-		<option value="">Select a Type</option>
-		<option value=""></option>
-	</select>
-</div>
+		<div class="comboBox">
+			<select class="comboSelect" id="" placeholder="Select a Type">
+				<option value="">Select a Type</option>
+				<option value=""></option>
+			</select>
+		</div>
 
-value="" 값과 option text를 비교하여 검색하는 기능 두가지가 동일해야 함.
+		value="" 값과 option text를 비교하여 검색하는 기능 두가지가 동일해야 함.
 	</textarea>
 	<!-- //souce code 뷰어 -->
 
@@ -245,7 +284,8 @@ value="" 값과 option text를 비교하여 검색하는 기능 두가지가 동
 	<div class="agreeChk">
 		<p class="txt">I am sure to read and to agree the terms</p>
 		<div class="checkbox">
-			<input type="checkbox" name="" id="check"><label for="check">Agree</label>
+			<input type="checkbox" name="" id="check">
+			<label for="check">Agree</label>
 		</div>
 	</div>
 	<!-- souce code 뷰어 -->
