--- a/login/cup10003.html
+++ b/login/cup10003.html
@@ -34,7 +34,9 @@
 <body>
 	<div class="flexWrap">
 		<div class="flexLayer">
-			<h1><img src="../static/images/common/logo.png" alt="OPUS LOGISTICS" /></h1>
+			<h1>
+				<img src="../static/images/common/logo.png" alt="OPUS LOGISTICS" />
+			</h1>
 			<div class="flexContent">
 				<div class="inner">
 					<h2 class="tit" id="i10003-newAccount">New Account</h2>
