프론트 배포

--- a/case/index.html
+++ b/case/index.html
@@ -35,9 +35,7 @@
 	<div class="wrapper">
 		<!-- 헤더영역 -->
 		<header id="headerWrap">
-			<h1>
-				<img src="../static/images/common/logo.jpg" alt="OPUS Logistics" />
-			</h1>
+			<h1><img src="../static/images/common/logo.jpg" alt="OPUS Logistics" /></h1>
 		</header>
 		<!-- //헤더영역 -->
 
@@ -75,117 +73,67 @@
 							<li>
 								<div class="gnbTit">Organization</div>
 								<ul class="dept">
-									<li>
-										<a href="#">Organization List</a>
-									</li>
-									<li>
-										<a href="#">Organization</a>
-									</li>
+									<li><a href="#">Organization List</a></li>
+									<li><a href="#">Organization</a></li>
 								</ul>
 								<button class="clip on"></button>
 							</li>
 							<li>
 								<div class="gnbTit">Warehousing</div>
 								<ul class="dept">
-									<li>
-										<a href="">Subscription List</a>
-									</li>
-									<li>
-										<a href="">Subscription List (Waiting)</a>
-									</li>
-									<li>
-										<a href="">Subscription List (Approved)</a>
-									</li>
-									<li>
-										<a href="">Subscription List (Cancelled)</a>
-									</li>
-									<li>
-										<a href="">Subscription List (Withdraw)</a>
-									</li>
+									<li><a href="">Subscription List</a></li>
+									<li><a href="">Subscription List (Waiting)</a></li>
+									<li><a href="">Subscription List (Approved)</a></li>
+									<li><a href="">Subscription List (Cancelled)</a></li>
+									<li><a href="">Subscription List (Withdraw)</a></li>
 								</ul>
 								<button class="clip"></button>
 							</li>
 							<li>
 								<div class="gnbTit">Billing</div>
 								<ul class="dept">
-									<li>
-										<a href="">Billing Policy List</a>
-									</li>
-									<li>
-										<a href="">Invoice List</a>
-									</li>
-									<li>
-										<a href="">Invoice List (Waiting)</a>
-									</li>
-									<li>
-										<a href="">Invoice List (Sent)</a>
-									</li>
-									<li>
-										<a href="">Invoice List (Paid)</a>
-									</li>
-									<li>
-										<a href="">Invoice List (Cancelled)</a>
-									</li>
-									<li>
-										<a href="">Scheduler and History</a>
-									</li>
+									<li><a href="">Billing Policy List</a></li>
+									<li><a href="">Invoice List</a></li>
+									<li><a href="">Invoice List (Waiting)</a></li>
+									<li><a href="">Invoice List (Sent)</a></li>
+									<li><a href="">Invoice List (Paid)</a></li>
+									<li><a href="">Invoice List (Cancelled)</a></li>
+									<li><a href="">Scheduler and History</a></li>
 								</ul>
 								<button class="clip"></button>
 							</li>
 							<li>
 								<div class="gnbTit">Usage</div>
 								<ul class="dept">
-									<li>
-										<a href="">Usage List</a>
-									</li>
-									<li>
-										<a href="">Usage List (Seat)</a>
-									</li>
-									<li>
-										<a href="">Usage List (Transaction)</a>
-									</li>
-									<li>
-										<a href="">Transaction List</a>
-									</li>
+									<li><a href="">Usage List</a></li>
+									<li><a href="">Usage List (Seat)</a></li>
+									<li><a href="">Usage List (Transaction)</a></li>
+									<li><a href="">Transaction List</a></li>
 								</ul>
 								<button class="clip"></button>
 							</li>
 							<li>
 								<div class="gnbTit">Service</div>
 								<ul class="dept">
-									<li>
-										<a href="#">Service List</a>
-									</li>
-									<li>
-										<a href="#">Tariff List</a>
-									</li>
-									<li>
-										<a href="">Service Group List</a>
-									</li>
+									<li><a href="#">Service List</a></li>
+									<li><a href="#">Tariff List</a></li>
+									<li><a href="">Service Group List</a></li>
 								</ul>
 								<button class="clip"></button>
 							</li>
 							<li>
 								<div class="gnbTit">Notice</div>
 								<ul class="dept">
-									<li>
-										<a href="#">Notice List</a>
-									</li>
+									<li><a href="#">Notice List</a></li>
 								</ul>
 								<button class="clip"></button>
 							</li>
 							<li>
 								<div class="gnbTit">Administration</div>
 								<ul class="dept">
-									<li>
-										<a href="#">System Code List</a>
-									</li>
-									<li>
-										<a href="#">Role List</a>
-									</li>
-									<li>
-										<a href="#">Mail Transmit History</a>
-									</li>
+									<li><a href="#">System Code List</a></li>
+									<li><a href="#">Role List</a></li>
+									<li><a href="#">Mail Transmit History</a></li>
 								</ul>
 								<button class="clip"></button>
 							</li>
