--- a/homepage/cup00002.html
+++ b/homepage/cup00002.html
@@ -34,9 +34,7 @@
 <body>
 	<div class="flexWrap">
 		<div class="flexLayer">
-			<h1>
-				<img src="../static/images/common/logo.png" alt="OPUS LOGISTICS" />
-			</h1>
+			<h1><img src="../static/images/common/logo.png" alt="OPUS LOGISTICS" /></h1>
 			<div class="flexContent">
 				<div class="inner">
 					<h2 class="tit" id="i00002-newAccountLb">Define Users</h2>
@@ -73,8 +71,7 @@
 							<ul class="optionList">
 								<li>
 									<div class="checkbox">
-										<input type="checkbox" name="i00002-usFaxChk" id="i00002-usFaxChk">
-										<label for="i00002-usFaxChk" id="i00002-usFax">U.S. Internet Fax</label>
+										<input type="checkbox" name="i00002-usFaxChk" id="i00002-usFaxChk"><label for="i00002-usFaxChk" id="i00002-usFax">U.S. Internet Fax</label>
 									</div>
 								</li>
 							</ul>
@@ -86,20 +83,17 @@
 							<ul class="optionList">
 								<li>
 									<div class="checkbox">
-										<input type="checkbox" name="i00002-usAmsChk" id="i00002-usAmsChk">
-										<label for="i00002-usAmsChk" id="i00002-usAms">U.S. AMS(Advance Manifest System)</label>
+										<input type="checkbox" name="i00002-usAmsChk" id="i00002-usAmsChk"><label for="i00002-usAmsChk" id="i00002-usAms">U.S. AMS(Advance Manifest System)</label>
 									</div>
 								</li>
 								<li>
 									<div class="checkbox">
-										<input type="checkbox" name="i00002-usIsfChk" id="i00002-usIsfChk">
-										<label for="i00002-usIsfChk" id="i00002-usIsf">U.S. ISF(Import Security Filing)</label>
+										<input type="checkbox" name="i00002-usIsfChk" id="i00002-usIsfChk"><label for="i00002-usIsfChk" id="i00002-usIsf">U.S. ISF(Import Security Filing)</label>
 									</div>
 								</li>
 								<li>
 									<div class="checkbox">
-										<input type="checkbox" name="i00002-krAmsChk" id="i00002-krAmsChk">
-										<label for="i00002-krAmsChk" id="i00002-krAms">Korean AMS(Advance Manifest System)</label>
+										<input type="checkbox" name="i00002-krAmsChk" id="i00002-krAmsChk"><label for="i00002-krAmsChk" id="i00002-krAms">Korean AMS(Advance Manifest System)</label>
 									</div>
 								</li>
 							</ul>
@@ -111,14 +105,12 @@
 							<ul class="optionList">
 								<li>
 									<div class="checkbox">
-										<input type="checkbox" name="i00002-vgmChk" id="i00002-vgmChk">
-										<label for="i00002-vgmChk" id="i00002-vgm">VGM(Verified Gross Mass)</label>
+										<input type="checkbox" name="i00002-vgmChk" id="i00002-vgmChk"><label for="i00002-vgmChk" id="i00002-vgm">VGM(Verified Gross Mass)</label>
 									</div>
 								</li>
 								<li>
 									<div class="checkbox">
-										<input type="checkbox" name="i00002-bookSiChk" id="i00002-bookSiChk">
-										<label for="i00002-bookSiChk" id="i00002-bookSi">Booking/Shipping Instruction</label>
+										<input type="checkbox" name="i00002-bookSiChk" id="i00002-bookSiChk"><label for="i00002-bookSiChk" id="i00002-bookSi">Booking/Shipping Instruction</label>
 									</div>
 								</li>
 							</ul>
