--- a/login/cup10001.html
+++ b/login/cup10001.html
@@ -34,9 +34,7 @@
 <body>
 	<div class="flexWrap">
 		<div class="flexLayer">
-			<h1>
-				<img src="../static/images/common/logo.png" alt="OPUS LOGISTICS" />
-			</h1>
+			<h1><img src="../static/images/common/logo.png" alt="OPUS LOGISTICS" /></h1>
 			<div class="flexContent">
 				<div class="inner">
 					<h2 class="tit" id="i10001-signInLb">Sign In</h2>
@@ -49,8 +47,7 @@
 						</div>
 						<div class="loginCheck">
 							<div class="checkbox">
-								<input type="checkbox" name="i10001-rememberMe" id="i10001-rememberMe">
-								<label for="i10001-rememberMe" id="i10001-rememberMeLb">Remember Me</label>
+								<input type="checkbox" name="i10001-rememberMe" id="i10001-rememberMe"><label for="i10001-rememberMe" id="i10001-rememberMeLb">Remember Me</label>
 							</div>
 						</div>
 						<div class="joinBtn">
