--- a/login/cup10006.html
+++ b/login/cup10006.html
@@ -34,9 +34,7 @@
 <body>
 	<div class="flexWrap">
 		<div class="flexLayer">
-			<h1>
-				<img src="../static/images/common/logo.png" alt="OPUS LOGISTICS" />
-			</h1>
+			<h1><img src="../static/images/common/logo.png" alt="OPUS LOGISTICS" /></h1>
 			<div class="flexContent">
 				<div class="inner">
 					<h2 class="tit" id="i10006-validateAccountLb">Validate Account</h2>
