--- a/pub/templateC.html
+++ b/pub/templateC.html
@@ -120,14 +120,12 @@
 	<ul class="optionList">
 		<li>
 			<div class="checkbox">
-				<input type="checkbox" name="" id="check">
-				<label for="check">VGM(Verified Gross Mass)</label>
+				<input type="checkbox" name="" id="check"><label for="check">VGM(Verified Gross Mass)</label>
 			</div>
 		</li>
 		<li>
 			<div class="checkbox">
-				<input type="checkbox" name="" id="check2">
-				<label for="check2">VGM(Verified Gross Mass)</label>
+				<input type="checkbox" name="" id="check2"><label for="check2">VGM(Verified Gross Mass)</label>
 			</div>
 		</li>
 	</ul>
@@ -208,20 +206,17 @@
 			<ul class="optionList">
 				<li>
 					<div class="checkbox">
-						<input type="checkbox" name="" id="check">
-						<label for="check">U.S. AMS(Advance Manifest System)</label>
+						<input type="checkbox" name="" id="check"><label for="check">U.S. AMS(Advance Manifest System)</label>
 					</div>
 				</li>
 				<li>
 					<div class="checkbox">
-						<input type="checkbox" name="" id="check">
-						<label for="check">U.S. ISF(Import Security Filing)</label>
+						<input type="checkbox" name="" id="check"><label for="check">U.S. ISF(Import Security Filing)</label>
 					</div>
 				</li>
 				<li>
 					<div class="checkbox">
-						<input type="checkbox" name="" id="check">
-						<label for="check">Korean AMS(Advance Manifest System)</label>
+						<input type="checkbox" name="" id="check"><label for="check">Korean AMS(Advance Manifest System)</label>
 					</div>
 				</li>
 			</ul>
