--- a/homepage/cup00007.html
+++ b/homepage/cup00007.html
@@ -34,27 +34,22 @@
 <body>
 	<div class="flexWrap">
 		<div class="flexLayer">
-			<h1>
-				<img src="../static/images/common/logo.png" alt="OPUS LOGISTICS" />
-			</h1>
+			<h1><img src="../static/images/common/logo.png" alt="OPUS LOGISTICS" /></h1>
 			<div class="flexContent">
 				<div class="inner">
 					<h2 class="tit" id="i00007-subscriptionSubmittedLb">Your Subscription Submitted</h2>
 					<div class="inpInner">
 						<p class="nTxt" id="i00007-dontWorryLb">
-							You have now successfully submit your subscription of <br /> OPUS Logistics Service.<br /> We will send a Email to instruct the service in few days. Please, follow the instruction in the Email.
+							You have now successfully submit your subscription of <br />
+							OPUS Logistics Service.<br />
+							We will send a Email to instruct the service in few days.
+							Please, follow the instruction in the Email.
 						</p>
-						<ul class="list1">
-							<li>
-								<a href="#" id="i00007-goToHome">Go to OPUS Logistics Homepage</a>
-							</li>
-							<li>
-								<a href="#" id="i00007-goToTraning">Go to OPUS Logistics Traning Materials</a>
-							</li>
-							<li>
-								<a href="#" id="i00007-goToSupport">Go to OPUS Logistics Support</a>
-							</li>
-						</ul>
+							<ul class="list1">
+								<li><a href="#" id="i00007-goToHome">Go to OPUS Logistics Homepage</a></li>
+								<li><a href="#" id="i00007-goToTraning">Go to OPUS Logistics Traning Materials</a></li>
+								<li><a href="#" id="i00007-goToSupport">Go to OPUS Logistics Support</a></li>
+							</ul>
 					</div>
 				</div>
 			</div>
