--- a/login/cup10010.html
+++ b/login/cup10010.html
@@ -12,9 +12,7 @@
 <body>
 
 	<div style="width:500px; padding:10px 10px; border:1px solid #d9d9d9;">
-		<h1>
-			<img src="../static/images/common/logo.png" alt="OPUS LOGISTICS" />
-		</h1>
+		<h1><img src="../static/images/common/logo.png" alt="OPUS LOGISTICS" /></h1>
 		<p>Hello!</p>
 		<p>You are receiving this Email because we want to validate your account. If you did not request your account validation, no further action is required.</p>
 		<a href="#">Validate Account</a>
