--- a/htmlList.html
+++ b/htmlList.html
@@ -130,6 +130,19 @@
                         <td><a target="_blank" href="#"></a></td>
                         <td class="red"></td>
                     </tr>
+					<tr class="line">
+                        <th>공통</th>
+                        <td></td>
+                        <td></td>
+                        <td><a target="_blank" href="common/head.html">head.html</a></td>
+                        <td>header</td>
+                    </tr>
+					<tr>
+                        <td></td>
+                        <td></td>
+                        <td><a target="_blank" href="layout/layout.html">layout.html</a></td>
+                        <td>layout</td>
+                    </tr>
 
 					<tr class="line">
                         <th>로그인</th>
