프론트 화면 수정 배포

--- a/htmlList.html
+++ b/htmlList.html
@@ -149,21 +149,26 @@
                         <td>Sign In</td>
                         <td></td>
                         <td><a target="_blank" href="login/cup10001.html">login/cup10001.html</a></td>
-                        <td class="red"></td>
+                        <td class="red">
+							2019-01-29 수정
+						</td>
                     </tr>
 					<tr>
                         <td>Password</td>
                         <td></td>
                         <td><a target="_blank" href="login/cup10002.html">login/cup10002.html</a></td>
                         <td>
-							제공된 썸네일 기본 이미지가 없어서 임의로 적용해 놓음 추후 변경 예정
+							제공된 썸네일 기본 이미지가 없어서 임의로 적용해 놓음 추후 변경 예정 <br />
+							<span class="red">2019-01-29 수정</span>
 						</td>
                     </tr>
 					<tr>
                         <td>신규가입</td>
                         <td></td>
                         <td><a target="_blank" href="login/cup10003.html">login/cup10003.html</a></td>
-                        <td class="red"></td>
+                        <td class="red">
+							2019-01-29 수정
+						</td>
                     </tr>
 					<tr>
                         <td>잊은암호 변경요청</td>
@@ -181,7 +186,9 @@
                         <td>신규가입 확인(메일)</td>
                         <td></td>
                         <td><a target="_blank" href="login/cup10010.html">login/cup10010.html</a></td>
-                        <td class="red"></td>
+                        <td class="red">
+							2019-01-29 수정
+						</td>
                     </tr>
 					<tr>
                         <td>신규가입 확인</td>
@@ -347,7 +354,9 @@
                         <td>계약정보입력</td>
                         <td></td>
                         <td><a target="_blank" href="homepage/cup00005.html">homepage/cup00005.html</a></td>
-                        <td class="red"></td>
+                        <td class="red">
+							2019-01-29 수정
+						</td>
                     </tr>
 					<tr>
                         <td>계약서확인</td>
