--- a/homepage/cup00005.html
+++ b/homepage/cup00005.html
@@ -80,7 +80,8 @@
 					<dl class="inpItem">
 						<dt id="i00005-countryLb">Country, Zip Code</dt>
 						<dd>
-							<div class="ui search selection dropdown country" id="i00005-country">
+							<!-- 2019-01-29 수정 -->
+							<div class="ui search selection dropdown country Mandate" id="i00005-country">
 								<input type="hidden" name="country">
 								<i class="dropdown icon"></i>
 								<div class="default text">Type Country</div>
@@ -329,6 +330,7 @@
 									<div class="item" data-value="zw"><i class="zw flag"></i>Zimbabwe</div>
 								</div>
 							</div>
+							<!--// 2019-01-29 수정 -->
 							<div class="inputBox zipCode">
 								<div class="inner">
 									<input type="text" name="i00005-zipCode" class="inp" id="i00005-zipCode" placeholder="Zip Code">
