--- a/login/cup10003.html
+++ b/login/cup10003.html
@@ -92,7 +92,7 @@
 							<div class="inputBox schType ty1">
 								<div class="inner">
 									<input type="text" class="inp autoSch ty1 code Readonly" readonly="readonly">
-									<input type="text" name="i10003-company" class="inp autoSch ty1 name" id="i10003-company" placeholder="Type Company Name">
+									<input type="text" name="i10003-company" class="inp autoSch ty1 name Mandate" id="i10003-company" placeholder="Type Company Name"> <!-- 2019-01-29 클래스 추가 -->
 									<button class="inpReset"></button>
 								</div>
 							</div>
@@ -101,7 +101,8 @@
 					<dl class="inpItem">
 						<dt id="i10003-departmentLb">Department</dt>
 						<dd>
-							<div class="inputBox">
+							<div class="inputBox full">
+								<!-- 2019-01-29 클래스 추가 -->
 								<input type="text" name="i10003-department" class="inp" id="i10003-department" placeholder="Type Department Name" maxlength="50">
 								<button class="inpReset"></button>
 							</div>
@@ -110,7 +111,8 @@
 					<dl class="inpItem">
 						<dt id="i10003-address1Lb">Address Line1</dt>
 						<dd>
-							<div class="inputBox">
+							<div class="inputBox full">
+								<!-- 2019-01-29 클래스 추가 -->
 								<input type="text" name="i10003-address1" class="inp" id="i10003-address1" placeholder="Type Street Address, P.O. box" maxlength="50">
 								<button class="inpReset"></button>
 							</div>
@@ -119,7 +121,8 @@
 					<dl class="inpItem">
 						<dt id="i10003-address2Lb">Address Line2</dt>
 						<dd>
-							<div class="inputBox">
+							<div class="inputBox full">
+								<!-- 2019-01-29 클래스 추가 -->
 								<input type="text" name="i10003-address2" class="inp" id="i10003-address2" placeholder="Type Department Name" maxlength="50">
 								<button class="inpReset"></button>
 							</div>
@@ -131,7 +134,7 @@
 							<div class="inputBox schType ty2">
 								<div class="inner">
 									<input type="text" class="inp autoSch ty2 code Readonly" readonly="readonly">
-									<input type="text" name="i10003-city" class="inp autoSch ty2 name" id="i10003-city" placeholder="Type City">
+									<input type="text" name="i10003-city" class="inp autoSch ty2 name Mandate" id="i10003-city" placeholder="Type City"><!-- 2019-01-29 클래스 추가 -->
 									<button class="inpReset"></button>
 								</div>
 							</div>
@@ -152,7 +155,8 @@
 					<dl class="inpItem">
 						<dt id="i10003-countryLb">Country</dt>
 						<dd>
-							<div class="ui search selection dropdown country" id="i10003-state">
+							<!-- 2019-01-29 클래스 수정 -->
+							<div class="ui search selection dropdown country Mandate" id="i10003-state">
 								<input type="hidden" name="country">
 								<i class="dropdown icon"></i>
 								<div class="default text">Type Country</div>
@@ -401,6 +405,7 @@
 									<div class="item" data-value="zw"><i class="zw flag"></i>Zimbabwe</div>
 								</div>
 							</div>
+							<!--// 2019-01-29 클래스 수정 -->
 							<div class="inputBox zipCode">
 								<div class="inner">
 									<input type="text" name="i10003-zipCode" class="inp" id="i10003-zipCode" placeholder="Zip Code">
